// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal> matches snapshot 1`] = `
<div
  aria-label="modal"
  aria-modal="true"
  class="content-base"
  role="dialog"
  tabindex="-1"
>
  <header
    class="css-1qvmmn3-modalHeader-modalHeader"
    data-testid="modal-header"
  >
    <div>
      <h2
        class="css-3lqpyc-headingContainer-headingContainer"
      >
        Test header
      </h2>
    </div>
  </header>
  <article
    class="css-1v47goe-modalContent"
  >
    Test body
  </article>
  <footer
    class="css-xu94ia-modalFooter-modalFooter"
    data-testid="modal-footer"
  >
    Test footer
  </footer>
</div>
`;

exports[`<Modal> matches snapshot with all props 1`] = `
<div
  aria-label="modal"
  aria-modal="true"
  class="content-base"
  role="dialog"
  style="border: 3px solid red;"
  tabindex="-1"
>
  <header
    class="css-1qvmmn3-modalHeader-modalHeader"
    data-testid="modal-header"
  >
    <div>
      <h2
        class="css-3lqpyc-headingContainer-headingContainer"
      >
        Test header
      </h2>
    </div>
  </header>
  <article
    class="css-1v47goe-modalContent"
    style="border: 2px solid green;"
  >
    <div
      style="margin-bottom: 16px;"
    >
      <input
        id="password"
        type="password"
      />
    </div>
    <div
      style="margin-bottom: 16px;"
    >
      <input
        id="new-password"
        type="password"
      />
    </div>
    <input
      id="retype-psw"
      type="password"
    />
  </article>
  <footer
    class="css-xu94ia-modalFooter-modalFooter"
    data-testid="modal-footer"
    style="border: 2px solid purple; text-align: right;"
  >
    <button
      style="margin-right: 1rem;"
    >
      Cancel
    </button>
    <button>
      Change password
    </button>
  </footer>
</div>
`;

exports[`<Modal> matches snapshot with custom HTML classes 1`] = `
<div
  aria-label="modal"
  aria-modal="true"
  class="content-base"
  role="dialog"
  tabindex="-1"
>
  <header
    class="css-1qvmmn3-modalHeader-modalHeader"
    data-testid="modal-header"
  >
    <div>
      <h2
        class="css-3lqpyc-headingContainer-headingContainer"
      >
        Test header
      </h2>
    </div>
  </header>
  <article
    class="css-1v47goe-modalContent"
  >
    Test body
  </article>
  <footer
    class="css-xu94ia-modalFooter-modalFooter"
    data-testid="modal-footer"
  >
    Test footer
  </footer>
</div>
`;
